--- a/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_IssuesLayout.cshtml
@@ -113,6 +113,20 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsesix"
+                   aria-expanded="true" aria-controls="collapsesix">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Category</span>
+                </a>
+                <div id="collapsesix" class="collapse" aria-labelledby="headingThree" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Categories:</h6>
+                        <a class="collapse-item" asp-page="/Issues/Categories/AddCategories">Add Category</a>
+                        <a class="collapse-item" asp-page="/Issues/Categories/Index">Category Detail</a>
+                    </div>
+                </div>
+            </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
