--- a/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/AddItem.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/AddItem.cshtml
@@ -80,6 +80,18 @@
                             <input asp-for="@Model.items.Photo" class="form-control-file" id="image">
                             <span class="text-danger"></span>
                         </div>
+                        <div class="form-group">
+                            <label asp-for="@Model.items.CategoryId">Category</label>
+                            <select asp-for="@Model.items.CategoryId" class="form-control">
+                                <option value="">---Select---</option>
+                                @foreach(var item in Model.categories)
+                                {
+                                     <option value="@item.Id">@item.Name</option>
+                                
+                                }
+                            </select>
+                            <span class="text-danger" asp-validation-for="@Model.items.CategoryId"></span>
+                        </div>
                         <div class="btn-container">
                             <button type="button" class="btn btn-secondary btn-cancel"><a asp-page="/Issues/Items/Index" style="color:white">Cancel</a></button>
                             <button type="submit" class="btn btn-add">Add Item</button>
