--- a/BBWebProject/BBWebProject/Pages/Issues/Login.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Login.cshtml
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin Login</title>
+    <title>Login-Bar&Bite</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/issues/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -45,15 +45,23 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" method="post" asp-page-handler="Login">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                   id="exampleInputEmail" aria-describedby="emailHelp"
-                                                   placeholder="Enter Email Address...">
+                                            <input asp-for="@Model.user.FullName" class="form-control form-control-user"
+                                                   aria-describedby="emailHelp"
+                                                   placeholder="Enter Full Name...">  
+                                                   <span asp-validation-for="@Model.user.FullName" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                   id="exampleInputPassword" placeholder="Password">
+                                            <input asp-for="@Model.user.UserName" class="form-control form-control-user"
+                                                   aria-describedby="emailHelp"
+                                                   placeholder="Enter User Name...">
+                                            <span asp-validation-for="@Model.user.FullName" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <input asp-for="@Model.user.Password" type="password" class="form-control form-control-user"
+                                                    placeholder="Password">
+                                            <span asp-validation-for="@Model.user.FullName" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -64,9 +72,9 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
                                         <hr>
                                         <a href="index.html" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
